fix vertical scrollbar are shown on windows and linux

--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -221,7 +221,6 @@
   $animation-delay: .02s;
 
   height: $height;
-  width: $width;
 
   overflow: hidden;
   display: block;
